*Empty MediaWiki Message*

--- a/ᏇᎵᎥᎻ.mw
+++ b/ᏇᎵᎥᎻ.mw
@@ -1,119 +1,105 @@
-[[File:Be-TableImage.png|thumb|250px|ᏇᎵᏯᎻ]]
+[[File:Ba-TableImage.png|thumb|250px|ᏇᎵᏯᎻ]]
 
 <big>'''ᏇᎵᏯᎻ'''</big> ([[ᎩᎵᏏ]]: ''Beryllium'', '''Be''') [[ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]. [[ᎠᏓᎻ]] ᎠᏎᏍᏗ – 4.
 
 [[Category:ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]
 
 
-[[af:Berillium]]
-[[an:Berilio]]
-[[ar:برليوم]]
-[[ast:Beriliu]]
-[[az:Berillium]]
-[[be:Берылій]]
-[[be-x-old:Бэрыль (элемэнт)]]
-[[bg:Берилий]]
-[[br:Beriliom]]
-[[bs:Berilijum]]
-[[ca:Beril·li]]
-[[ckb:بیریلیۆم]]
-[[co:Berilliu]]
-[[cs:Beryllium]]
-[[cv:Берилли]]
-[[cy:Beriliwm]]
-[[da:Beryllium]]
-[[de:Beryllium]]
-[[el:Βηρύλλιο]]
-[[en:Beryllium]]
-[[eo:Berilio]]
-[[es:Berilio]]
-[[et:Berüllium]]
-[[eu:Berilio]]
-[[fa:بریلیم]]
-[[fi:Beryllium]]
-[[fr:Béryllium]]
-[[frr:Beryllium]]
-[[fur:Berili]]
-[[fy:Beryllium]]
-[[ga:Beirilliam]]
-[[gl:Berilio]]
-[[gv:Beryllium]]
-[[hak:Phì]]
-[[haw:Beryllium]]
-[[he:בריליום]]
-[[hi:बेरिलियम]]
-[[hif:Beryllium]]
-[[hr:Berilij]]
-[[hsb:Berylium]]
-[[ht:Berilyòm]]
-[[hu:Berillium]]
-[[hy:Բերիլիում]]
-[[ia:Beryllium]]
-[[id:Berilium]]
-[[io:Berilio]]
-[[is:Beryllín]]
-[[it:Berillio]]
-[[ja:ベリリウム]]
-[[ka:ბერილიუმი]]
-[[kn:ಬೆರಿಲಿಯಮ್]]
-[[ko:베릴륨]]
-[[ku:Berîlyûm]]
-[[kv:Бериллий]]
-[[la:Beryllium]]
-[[lb:Beryllium]]
-[[lij:Berillio]]
-[[ln:Belilu]]
-[[lt:Berilis]]
-[[lv:Berilijs]]
-[[mi:Konuuku]]
-[[mk:Берилиум]]
-[[ml:ബെറിലിയം]]
-[[mr:बेरिलियम]]
-[[mrj:Бериллий]]
-[[ms:Berilium]]
-[[my:ဘယ်ရီလီယမ်]]
-[[nah:Iztactlāltepoztli]]
-[[nds:Beryllium]]
-[[ne:बेरिलियम]]
-[[nl:Beryllium]]
-[[nn:Beryllium]]
-[[no:Beryllium]]
-[[oc:Berilli]]
-[[pa:ਬੇਰਿਲੀਅਮ]]
-[[pap:Beryllio]]
-[[pl:Beryl (pierwiastek)]]
-[[pms:Berili]]
-[[pnb:بیریلیم]]
-[[pt:Berílio]]
-[[qu:Berilyu]]
-[[ro:Beriliu]]
-[[ru:Бериллий]]
-[[sah:Бериллиум]]
-[[sh:Berilijum]]
-[[si:බෙරිලියම්]]
-[[simple:Beryllium]]
-[[sk:Berýlium]]
-[[sl:Berilij]]
-[[sq:Beriliumi]]
-[[sr:Берилијум]]
-[[stq:Beryllium]]
-[[sv:Beryllium]]
-[[sw:Berili]]
-[[ta:பெரிலியம்]]
-[[te:బెరీలియం]]
-[[th:เบริลเลียม]]
-[[tl:Berilyo]]
-[[tr:Berilyum]]
-[[ug:بېرىللىي]]
-[[uk:Берилій]]
-[[ur:بلوصر]]
-[[uz:Berilliy]]
-[[vep:Berillii]]
-[[vi:Berili]]
-[[war:Berilyo]]
-[[xal:Белүр]]
-[[yi:בעריליום]]
-[[yo:Beryllium]]
-[[zh:铍]]
-[[zh-min-nan:Beryllium]]
-[[zh-yue:鈹]]
+[[af:Barium]]
+[[an:Bario]]
+[[ar:باريوم]]
+[[az:Barium]]
+[[be:Барый]]
+[[be-x-old:Бар (элемэнт)]]
+[[bg:Барий]]
+[[bn:বেরিয়াম]]
+[[bs:Barijum]]
+[[ca:Bari (element)]]
+[[co:Bariu]]
+[[cs:Baryum]]
+[[cv:Бари (элемент)]]
+[[cy:Bariwm]]
+[[da:Barium]]
+[[de:Barium]]
+[[el:Βάριο]]
+[[en:Barium]]
+[[eo:Bario]]
+[[es:Bario]]
+[[et:Baarium]]
+[[eu:Bario]]
+[[fa:باریم]]
+[[fi:Barium]]
+[[fr:Baryum]]
+[[fur:Bari]]
+[[ga:Bairiam]]
+[[gl:Bario]]
+[[gv:Baarium]]
+[[hak:Pi]]
+[[he:בריום]]
+[[hi:बेरियम]]
+[[hif:Barium]]
+[[hr:Barij]]
+[[ht:Baryòm]]
+[[hu:Bárium]]
+[[hy:Բարիում]]
+[[ia:Barium]]
+[[id:Barium]]
+[[io:Bario]]
+[[is:Barín]]
+[[it:Bario]]
+[[ja:バリウム]]
+[[jv:Barium]]
+[[ka:ბარიუმი]]
+[[kk:Барий]]
+[[kn:ಬೇರಿಯಮ್]]
+[[ko:바륨]]
+[[ku:Baryûm]]
+[[kv:Барий]]
+[[la:Barium (elementum)]]
+[[lb:Barium]]
+[[lij:Bario]]
+[[lt:Baris]]
+[[lv:Bārijs]]
+[[mi:Konu-okehu]]
+[[ml:ബേരിയം]]
+[[mn:Бари]]
+[[mr:बेरियम]]
+[[mrj:Барий]]
+[[ms:Barium]]
+[[my:ဘေရီယမ်]]
+[[nds:Barium]]
+[[nl:Barium]]
+[[nn:Barium]]
+[[no:Barium]]
+[[oc:Bari (element)]]
+[[pl:Bar (pierwiastek)]]
+[[pnb:بیریم]]
+[[pt:Bário]]
+[[qu:Baryu]]
+[[ro:Bariu]]
+[[ru:Барий]]
+[[sah:Бариум]]
+[[scn:Bariu]]
+[[sh:Barijum]]
+[[simple:Barium]]
+[[sk:Bárium]]
+[[sl:Barij]]
+[[sr:Баријум]]
+[[stq:Barium]]
+[[sv:Barium]]
+[[sw:Bari]]
+[[ta:பேரியம்]]
+[[th:แบเรียม]]
+[[tl:Baryo (elemento)]]
+[[tr:Baryum]]
+[[ug:بارىي]]
+[[uk:Барій]]
+[[ur:بیریئم]]
+[[vep:Barii]]
+[[vi:Bari]]
+[[war:Baryo (elemento)]]
+[[xal:Бариум]]
+[[yi:באריום]]
+[[yo:Barium]]
+[[zh:钡]]
+[[zh-yue:鋇]]
