*Empty MediaWiki Message*

--- a/ᏇᎵᎥᎻ.mw
+++ b/ᏇᎵᎥᎻ.mw
@@ -1,6 +1,6 @@
 [[File:Ba-TableImage.png|thumb|250px|ᏇᎵᏯᎻ]]
 
-<big>'''ᏇᎵᏯᎻ'''</big> ([[ᎩᎵᏏ]]: ''Beryllium'', '''Be''') [[ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]. [[ᎠᏓᎻ]] ᎠᏎᏍᏗ – 56.
+<big>'''ᏇᎵᏯᎻ'''</big> ([[ᎩᎵᏏ]]: ''Barium'', '''Ba''') [[ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]. [[ᎠᏓᎻ]] ᎠᏎᏍᏗ – 56.
 
 [[Category:ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]
 
