*Empty MediaWiki Message*

--- a/ᏇᎵᎵᎥᎻ.mw
+++ b/ᏇᎵᎵᎥᎻ.mw
@@ -1,6 +1,6 @@
-[[File:Be-TableImage.png|thumb|250px|ᏇᎵᏯᎻ]]
+[[File:Be-TableImage.png|thumb|250px|ᏇᎵᎵᏯᎻ]]
 
-<big>'''ᏇᎵᏯᎻ'''</big> ([[ᎩᎵᏏ]]: ''Beryllium'', '''Be''') [[ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]. [[ᎠᏓᎻ]] ᎠᏎᏍᏗ – 4.
+<big>'''ᏇᎵᎵᏯᎻ'''</big> ([[ᎩᎵᏏ]]: ''Beryllium'', '''Be''') [[ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]. [[ᎠᏓᎻ]] ᎠᏎᏍᏗ – 4.
 
 [[Category:ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]
 
