*Empty MediaWiki Message*

--- a/ᎦᎶᎵᎠᏂ.mw
+++ b/ᎦᎶᎵᎠᏂ.mw
@@ -2,6 +2,7 @@
 | Name = ᏩᎶᏫᎠᏂ
 | original = Florianus
 | picture = Francesco_del_Cossa_014.jpg
+| caption = ''[[Saint Florian|ᎾᏍᎦᏅᎾ ᏩᎶᏫᎠᏂ]]'', 1473 ᎠᏂᎶᏁᏍᎬ [[Francesco del Cossa|ᎦᎸᏤᏍᎪ ᏕᎵ ᎪᏌ]]
 | ᎩᎵᏏ = Florian
 | ᏗᎦᎪᏗ = ᎠᏍᎦᏯ
 | ᏚᏙᎥ ᎢᎦ = ᎠᏂᏍᎬᏗ
@@ -11,3 +12,29 @@
 }}
 
 <big>'''ᏩᎶᏫᎠᏂ'''</big> ᏣᎳᎩ ᎠᏁᏢᏔᏅᎯ ᎩᎵᏏ ᏚᏙᎥ '''''Florian'''''.
+
+== ᏗᎦᏃᏣᎵ ᎠᏂᏴᏫ ==
+*[[Saint Florian|ᎾᏍᎦᏅᎾ ᏩᎶᏫᎠᏂ]]  (ᎣᏲᎱᏢᎢ ~304), [[ᏧᎾᏁᎸᏗ]] ᎾᏍᎦᏅᎾ ᎠᎴ [[ᎠᏂᏉᎵ|ᎠᏉᎵ]] ᎾᏍᎦᏅᎾ 
+*[[Florian Abrahamowicz|ᏩᎶᏫᎠᏂ ᎡᏆᎭᎼᏫᏥ]] (ᎤᏕᏅᎢ 1961) ᎣᏍᏟᏯ ᎠᎵᏣᏙᎲᏍᎩ
+*[[Florian Grzechowiak|ᏩᎶᏫᎠᏂ ᎬᏤᏦᏫᎠᎩ]] (1914&ndash;1972), [[ᎠᏂᏉᎵ|ᎠᏉᎵ]] [[ᏔᎷᏣ ᎠᎳᏍᎦᎶᏗ]] ᎠᎾᏁᎶᎲᏍᎩ
+*[[Florian Habicht|ᏩᎶᏫᎠᏂ ᎭᏈᎩᏘ]] (ᎤᏕᏅᎢ 1975), [[New Zealand|ᏄᏏᎳᏂ]] [[ᎠᎾᏓᏎᎮᎯ]]
+*[[Florian Henckel von Donnersmarck|ᏩᎶᏫᎠᏂ ᎮᏂᎨᎵ ᏬᏂ ᏓᏅᏍᎹᎦ]] (ᎤᏕᏅᎢ 1973) ᎣᏍᏟᏯ-[[ᎠᏂᏙᎢᏥ|ᎠᏙᎢᏥ]] ᎠᎾᏓᏁᎮᎯ
+*[[Florian Jungwirth|ᏩᎶᏫᎠᏂ ᏧᏂᎩᏮᏘ]] (ᎤᏕᏅᎢ 1989), ᎠᏙᎢᏥ ᎠᎾᏁᎶᎲᏍᎩ
+*[[Florian Myrtaj|ᏩᎶᏫᎠᏂ ᎹᏔᏥ]] (ᎤᏕᏅᎢ 1976), [[ᎠᎵᏇᏂᏱ|ᎠᎵᏇᏂ]] ᎠᎾᏁᎶᎲᏍᎩ
+*[[Florian Roost|ᏩᎶᏫᎠᏂ ᏭᏍᏘ]] (ᎤᏕᏅᎢ 1989), [[ᎠᏂᏍᏫᏏ|ᎠᏍᏫᏏ]] ᎤᏁᏍᏓᎳ ᎠᎵᏍᎩᏍᎩ a Swiss ice dancer
+*[[Florian Skilang Temengil|ᏩᎶᏫᎠᏂ ᏍᎩᎳᏂᎩ ᏖᎺᏂᎩᎵ]] (ᎤᏕᏅᎢ 1986), ᏩᎳᎤ ᎠᏁᎯᎯ [[Wichita|ᏫᏥᏔ]] ᎡᎯ.
+*[[Florian Vijent|ᏩᎶᏫᎠᏂ ᏩᏰᏂᏘ]] (1961&ndash;1989), [[ᎠᏂᏛᏥ|ᎠᏛᏥ]]-[[ᎠᏂᏑᎵᎾᎻ|ᎠᏑᎵᎾᎻ]] ᎠᎾᏁᎶᎲᏍᎩ
+
+
+[[cs:Florián]]
+[[de:Florian]]
+[[en:Florian (name)]]
+[[eo:Floriano (persona nomo)]]
+[[fr:Florian (prénom)]]
+[[it:Floriano (nome)]]
+[[la:Florianus]]
+[[hu:Flórián]]
+[[nl:Florian (voornaam)]]
+[[pl:Florian]]
+[[sk:Florián (prvé meno)]]
+[[sl:Florjan (ime)]]
