*Empty MediaWiki Message*

--- a/ᎦᎶᎵᎠᏂ.mw
+++ b/ᎦᎶᎵᎠᏂ.mw
@@ -5,7 +5,7 @@
 | caption = ''[[Saint Florian|ᎾᏍᎦᏅᎾ ᏩᎶᏫᎠᏂ]]'', 1473 ᎠᏂᎶᏁᏍᎬ [[Francesco del Cossa|ᎦᎸᏤᏍᎪ ᏕᎵ ᎪᏌ]]
 | ᎩᎵᏏ = Florian
 | ᏗᎦᎪᏗ = ᎠᏍᎦᏯ
-| ᏚᏙᎥ ᎢᎦ = ᎠᏂᏍᎬᏗ
+| ᎢᎦ = ᎠᏂᏍᎬᏗ 4
 | ᎧᏬᏂᎯᏍᏗ = [[ᎠᏂᎶᎻ ᎧᏬᏂᎯᏍᏗ|ᎶᎻ]]
 | ᎾᎿᎢ = [[ᎠᏂᎶᎻ ᎠᏰᎵ ᎤᎾᏙᏢᏒ]]
 | ᎦᏛᎬᎢ = [[ᎠᏥᎸᏍᎩ]]
