--- a/ᏆᏟᎩ.mw
+++ b/ᏆᏟᎩ.mw
@@ -24,7 +24,7 @@
 * [[Padraic Colum|ᏆᏟᎩ ᎪᎳᎻ]] (1881–1972), [[Ireland|ᎠᏯᎳᏂ]] [[ᎪᏪᎵ ᎪᏪᎵᏍᎩ]]
 * [[Patrick Hanrahan|ᏆᏟᎩ ᎮᏂᎳᎮᏂ]], [[ᎠᏂᏒᏗᏝ|ᎠᏒᎳᏗᏝ]] ᎪᏪᎵ ᎪᏪᎵᏍᎩ
 * [[Patrick Hillery|ᏆᏟᎩ ᎯᎳᏫ]] (1923–2008), ᏑᏓᎵᏁᎢ ᎤᎬᏫᏳᎯ [[Ireland|ᎠᏯᎳᏂ]] (1976–1990)
-* [[Patrick Jones]], [[ᎠᏂᏪᎵᏏ|ᎠᏪᎵᏏ]] ᏗᎪᏪᎵᏍᎩ ᎧᏃᎮᏢᏍᎩ
+* [[Patrick Jones|ᏆᏟᎩ ᏦᏂᏏ]], [[ᎠᏂᏪᎵᏏ|ᎠᏪᎵᏏ]] ᏗᎪᏪᎵᏍᎩ ᎧᏃᎮᏢᏍᎩ
 * [[Patrick Mboma|ᏆᏟᎩ ᎽᏉᎹ]], [[ᎧᎺᎷᏂ|ᎠᎧᎺᎷᏂ]] ᎠᎾᏁᎶᎲᏍᎩ 
 * [[Patrick da Silva|ᏆᏟᎩ Ꮣ ᏏᎵᏩ]], [[ᎠᏂᏆᏏᎵ|ᎠᏆᏏᎵ]] ᎠᎾᏁᎶᎲᏍᎩ
 * [[Patrick Topaloff|ᏆᏟᎩ ᏙᏩᎶᏫ]] (1944–2010), [[ᎠᎦᎸᏥ]] ᏗᎧᏃᎩᏍᎩ ᎠᎴ ᎠᏛᏁᎵᏍᎩ
