--- a/ᏆᏟᎩ.mw
+++ b/ᏆᏟᎩ.mw
@@ -19,7 +19,7 @@
 * [[Patrik Andersson|ᏆᏟᎩ ᎡᏂᏓᏌᏂ]], [[ᎠᏂᏍᏫᏕᏂ|ᎠᏍᏫᏕᏂ]] ᎠᎾᏁᎶᎲᏍᎩ
 * [[Patrik Berger|ᏆᏟᎩ ᏋᎦ]], [[ᎠᏂᏤᎩ|ᎠᏤᎩ]] ᎠᎾᏁᎶᎲᏍᎩ 
 * [[Patrick Blake|ᏆᏟᎩ ᏆᎴᎩ]] (1846–1909), [[ᎠᏂᎧᎾᏓ|ᎠᎧᎾᏓ]]
-* [[Patrick Tracy Burris|ᏆᏟᎩ ᏞᏏ ᏋᏫᏏ]] (1967–2009), [[ᎠᎺᎵᎨ]] ᎠᏓᎯᎯ
+* [[Patrick Tracy Burris|ᏆᏟᎩ ᏞᏏ ᏋᏫᏏ]] (1967–2009), [[ᏴᏩᏁᎬ]] ᎠᏓᎯᎯ
 * [[Patrick Cargill|ᏆᏟᎩ ᎧᎩᎵ]], [[ᎠᏂᎩᎵᏏ|ᎠᎩᎵᏏ]] ᎠᏛᏁᎵᏍᎩ
 * [[Padraic Colum|ᏆᏟᎩ ᎪᎳᎻ]] (1881–1972), [[Ireland|ᎠᏯᎳᏂ]] [[ᎪᏪᎵ ᎪᏪᎵᏍᎩ]]
 * [[Patrick Hanrahan|ᏆᏟᎩ ᎮᏂᎳᎮᏂ]], [[ᎠᏂᏒᏗᏝ|ᎠᏒᎳᏗᏝ]] ᎪᏪᎵ ᎪᏪᎵᏍᎩ
