/* ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ */

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -12,46 +12,46 @@
 * [[Azerbaijan|ᎠᏎᏆᏣᏂ]]
 * [[Estonia|ᎡᏍᏙᏂᏱ]]
 * [[Belarus|ᏇᎳᎷᏏ]]
-* [[Belgium|ᏇᎵᏥᏱ]]
-* [[Bosnia & Herzegovina|ᏉᏍᏂᏱ ᎠᎴ ᎲᏤᎪᏫᎾ]]
+* [[Belgium|ᏇᎵᏣᎻ]]
+* [[Bosnia & Herzegovina|ᏆᏍᏂᏯ ᎠᎴ ᎲᏤᎪᏫᎾ]]
 * [[Bulgaria|ᏊᎵᎨᎵᏱ]]
 * [[Croatia|ᏉᎡᏏᏱ]]
 * [[Cyprus|ᏌᏈ]]
 * [[Czech Republic|ᏤᎩᏱ]]
 * [[Denmark|ᏕᏂᎹᎩ]]
-* [[Finland|ᏫᏂᎴᏂᏗ]]
-* [[United Kingdom|ᎩᎵᏏᏲ]]
+* [[Finland|ᏫᏂᎳᏂ]]
+* [[United Kingdom|ᎩᎵᏏᏱ]]
 * [[France|ᎦᎸᏥᏱ]]
 * [[Georgia|ᏣᏥᏱ]]
 * [[Greece|ᎪᎢ]]
-* [[Hungary|ᎱᏂᎦᎵ]]
-* [[Iceland|ᎤᏁᏍᏓᎶᎯ]]
-* [[Ireland|ᎠᏯᎳᎾᏗ]]
+* [[Hungary|ᎲᎦᎵᏱ]]
+* [[Iceland|ᎤᏁᏍᏓᎶᎢ]]
+* [[Ireland|ᎠᏯᎳᏂ]]
 * [[Kazakhstan|ᎧᏌᎩᏍᏔᏂ]]
-* [[Latvia|ᎳᏘᏫᏱ]]
-* [[Liechtenstein|ᎵᎩᏖᏂᏍᏖᏂ]]
-* [[Lithuania|ᎵᏚᏪᏂᏱ]]
+* [[Latvia|ᎳᏘᏫᏯ]]
+* [[Liechtenstein|ᎵᎩᏖᏂᏍᏔᎢᏂ]]
+* [[Lithuania|ᎵᏚᏪᏂᏯ]]
 * [[Luxembourg|ᎳᎦᏎᎻᏋᎩ]]
-* [[Macedonia|ᎹᏏᏙᏂ]]
+* [[Macedonia|ᎹᏏᏙᏂᏱ]]
 * [[Malta|ᎹᎵᏔ]]
-* [[Moldova|ᎼᎵᏙᏩ]]
+* [[Moldova|ᎹᎵᏙᏩ]]
 * [[Monaco|ᎼᎾᎪ]]
 * [[Montenegro|ᎼᏂᏖᏁᏉ]]
 * [[Netherlands|ᏛᏥᏱ]]
 * [[Norway|ᏃᏪᏱ]]
-* [[Poland|ᏉᎳᎾᏗ]]
+* [[Poland|ᏉᎳᏂ]]
 * [[Portugal|ᏉᏧᎦᎵ]]
 * [[Romania|ᎶᎺᏂᏱ]]
-* [[Spain|ᏍᏆᏂ]]
+* [[Spain|ᏍᏆᏂᏱ]]
 * [[San Marino]]
 * [[Serbia|ᏒᏈᏱ]]
 * [[Slovakia|ᏍᎶᏩᎩᏱ]]
 * [[Slovenia|ᏍᎶᏪᏂᏱ]]
-* [[Switzerland|ᏍᏫᏣᎳᎾᏗ]]
+* [[Switzerland|ᏍᏫᏣᎳᏂ]]
 * [[Turkey|ᎬᏂᏱ]]
-* [[Ukraine|ᏳᎧᏪᏂᏱ]]
-* [[Italy|ᎬᏩᎵᏲᏥ (ᎢᏓᎵ)]]
-* [[Russia|ᏲᏂᎢ]]
+* [[Ukraine|ᏳᎧᏪᏂ]]
+* [[Italy|ᎬᏩᎵᏲᏥ (ᎢᏓᎵᏱ)]]
+* [[Russia|ᏲᏂᏱ]]
 
 <div align="left">{{ᎡᎶᏆ}}</div>
 
