--- a/ᎩᎵᏏᏲ.mw
+++ b/ᎩᎵᏏᏲ.mw
@@ -21,10 +21,10 @@
 ᎡᎵᏏᎯ ᏅᎩ [[states|ᎧᏃᎮᎭ]] ᎠᎴ 14 [[overseas|ᏍᎪᏂᏱ]] ᎿᎾ ᎨᏒ ᎤᎭ. 
 
 === ᎧᏃᎮᎭ ===
-* England
-* Northern Ireland
-* Scotland
-* Wales
+* [[England|ᎩᎵᏏᏱ]]
+* [[Northern Ireland|ᏧᏴᏢ ᎠᏯᎳᏂ]]
+* [[Scotland|ᏍᎦᏥᎳᏂ]]
+* [[Wales|ᏪᎵᏏ]]
 
 === ᏍᎪᏂᏱ ᎿᎾ ᎨᏒ ===
 * [[Anguilla]]
