*Empty MediaWiki Message*

--- a/ᏇᎵᏥᎥᎻ.mw
+++ b/ᏇᎵᏥᎥᎻ.mw
@@ -1,6 +1,6 @@
 {{Infobox Country
 | Long name = Koninkrijk België <br> Royaume de Belgique <br> Königreich Belgien
-| Name = ᏇᎵᏥᏱ
+| Name = ᏇᎵᏣᎻ
 | ᎦᏓᏘ = Flag_of_Belgium.svg
 | Coat of arms = Greater_Coat_of_Arms_of_Belgium.svg
 | Location = EU-Belgium.svg
@@ -11,7 +11,7 @@
 | ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
-<big>'''ᏇᎵᏥᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᏇᎵᏣᎻ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
 
 [[ace:Bèlgia]]
 [[af:België]]
