--- a/ᏧᏴᏢ_ᎠᎹᏰᏟ.mw
+++ b/ᏧᏴᏢ_ᎠᎹᏰᏟ.mw
@@ -24,7 +24,7 @@
 | align="right" | 57,000
 | [[Nuuk|ᏄᎧ]]
 |-
-| [[Mexico|ᎺᏏᏅᏟ]]
+| [[Mexico|ᎺᏏᎪ]]
 | align="right" | 1,964,375
 | align="right" | 109,610,000
 | [[Mexico City|ᎺᏏᎪ ᎦᏚᎲ]]
