--- a/ᎹᎵᏙᏫᎠ.mw
+++ b/ᎹᎵᏙᏫᎠ.mw
@@ -1,4 +1,6 @@
-[[File:Location Moldova Europe.png|thumb|right|ᎼᎸᏙᏩ]]'''ᎼᎸᏙᏩ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎡᎶᏆ]].
+[[File:Location Moldova Europe.png|thumb|right|ᎼᎸᏙᏩ]]
+
+<big>'''ᎼᎵᏙᏩ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
 
 {{stub}}
 
