*Empty MediaWiki Message*

--- a/ᏇᎳᎷᏍ.mw
+++ b/ᏇᎳᎷᏍ.mw
@@ -1,6 +1,6 @@
 {{Infobox Country
 | Long name = Рэспубліка Беларусь<br />Республика Беларусь
-| Name = ᏇᎳᎷᏒ
+| Name = ᏇᎳᎷᏏ
 | ᎦᏓᏘ = Flag of Belarus.svg
 | Coat of arms = Coat of arms of Belarus.svg
 | Location = LocationBelarus.png
@@ -10,7 +10,7 @@
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = Аляксандр Лукашэнка
 | ᎠᏕᎳ = Беларускі рубель
 }}
-'''ᏇᎳᎷᏒ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗtᎥ [[ᏳᎳᏛ]].
+'''ᏇᎳᎷᏏ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗtᎥ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
 
  
 {{Stub}}
