*Empty MediaWiki Message*

--- a/ᏒᏈᏯ.mw
+++ b/ᏒᏈᏯ.mw
@@ -1,10 +1,10 @@
-[[File:Location Serbia Europe.png|thumb|right|ᏎᎸᏈᏯ]]ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢ [[ᏳᎳᏛ]]. ᎠᎦᏴᎵ [[ᏳᎪᏍᎳᏈ]].
+[[File:Location Serbia Europe.png|thumb|right|ᏒᏈᏯ]]
+ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢ [[ᏳᎳᏈ]]. ᎠᎦᏴᎵ [[ᏳᎪᏍᎳᏈ]].
 
 {{stub}}
 
 [[Category:ᏳᎳᏛ]]
 [[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
-[[Category:Questionably transliterated titles]]
 
 [[ace:Sèrbia]]
 [[af:Serwië]]
