*Empty MediaWiki Message*

--- a/ᏳᏪᏅᏍ_(ᎤᏁᎳᏅᎯ).mw
+++ b/ᏳᏪᏅᏍ_(ᎤᏁᎳᏅᎯ).mw
@@ -56,6 +56,8 @@
 # [[ᏙᏧ ᎠᏂᏂᎻᏆ]]
 # [[ᎠᏩᎶᏓᏘ]] (ᎮᏏᎣᏗ)
 
+[[Category:ᎠᏂᎪᎢ ᎤᎾᏁᎳᏅᎯ]]
+
 [[af:Uranos]]
 [[an:Urán (mitolochía)]]
 [[ar:أورانوس (ميثولوجيا)]]
