--- a/ᏍᏫᏕᏂ.mw
+++ b/ᏍᏫᏕᏂ.mw
@@ -4,14 +4,41 @@
 | ᎦᏓᏘ = Flag_of_Sweden.svg
 | Coat of arms = Coat_of_Arms_of_Sweden.svg
 | Location = EU-Sweden.svg
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᏍᏫᏕᏂ ᎦᏬᏂᎯᏍᏗ|ᏍᏫᏕᏂ]]
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᏍᏫᏗ ᎦᏬᏂᎯᏍᏗ|ᏍᏫᏗ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Stockholm|ᏍᏔᎧᎰᎻ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏍᏔᎧᎰᎻ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[ᎧᎵ XVI ᎫᏍᏔᏫ|ᎤᎬᏫᏳᎯ ᎧᎵ XVI ᎫᏍᏔᏫ]] <br> <small>Carl XVI Gustaf </small> <br> [[ᏇᏓᏫᎩ ᏩᎢᏂᏪᎵᏘ]] <br> <small>Fredrik Reinfeldt</small> <br> [[ᏇᎠ ᏪᏍᏔᏋᎩ]] <br> <small>Per Westerberg</small>
 | ᎠᏕᎳ = ᏍᏫᏕᏂ ᎠᏕᎳ
 }}
 
-<big>'''ᏍᏫᏕᏂ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᏍᏫᏕᏂ'''</big> ᎠᎴ '''ᎤᎦᎾᏍᏔ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. '''ᎠᏂᏍᏫᏗ''' ᎦᏬᏂᎯᏍᏗ [[Sweden|ᏍᏫᏕᏂ]]. 10,000,000 ᎠᏂᏴᏫ ᎤᎦᎾᏍᏔ ᎦᏬᏂᎯᏍᏗ ᎠᏂᏬᏂᎭ.
+
+[[File:Svenska spåkets utbredning.PNG|300px|right]]
+
+{| class="wikitable" style="border=1px solid grey;"
+! ᏣᎳᎩ !! ᏍᏫᏗ
+|-
+| ᎣᏏᏲ
+| hej
+|-
+| ᏩᏙ
+| tack
+|-
+| ᎠᏍᎦᏴ
+| herrar
+|-
+| ᎠᎨᏴ
+| damer
+|-
+|}
+
+[[File:Nya Testamentet Karl XII Bibel 1778.jpg|thumb|left|ᎠᏂᎤᎦᎾᏍᏔ ᎦᏬᏂᎯᏍᏗ [[New Testament|ᎢᏤ ᎧᏃᎮᏛ]], Karl XII [[Bible|ᏗᎦᎸᏉᏗ ᏗᎪᏪᎵ]], 1778]]
+{{clear}}
+{{stub}}
+
+[[Category:ᏳᎳᏛ]]
+[[Category:ᎦᏬᏂᎯᏍᏗ]]
+
 
 [[ace:Swèdia]]
 [[kbd:Шуэц]]
