*Empty MediaWiki Message*

--- a/ᎠᎢᎵᏏ.mw
+++ b/ᎠᎢᎵᏏ.mw
@@ -16,6 +16,7 @@
 
 <big>'''ᎠᎢᎵᏏ'''</big> ([[ᎪᎢ]]: ''''Ιρις''' ''Íris''; [[ᎶᎻ]]: '''Arcus''') ᎠᎪᎢ ᎤᏁᎳᏅᎯ ᎠᎨᏯ [[ᎤᏅᎪᎳᏛ]].
 
+[[Category:ᎠᏂᎪᎢ ᎤᎾᏁᎳᏅᎯ]]
 
 [[az:İrida]]
 [[bg:Ирида]]
