*Empty MediaWiki Message*

--- a/ᎠᎢᎵᏏ.mw
+++ b/ᎠᎢᎵᏏ.mw
@@ -14,9 +14,9 @@
 |-
 |}
 
-<big>'''ᎠᎢᎵᏏ'''</big> ([[ᎪᎢ]]: ''''Ιρις''' ''Íris''; [[ᎶᎻ]]: '''Arcus''') ᎠᎪᎢ ᎤᏁᎳᏅᎯ ᎠᎨᏯ [[ᎤᏅᎪᎳᏛ]].
+<big>'''ᎠᎢᎵᏏ'''</big> ([[ᎪᎢ]]: ''''Ιρις''' ''Íris''; [[ᎶᎻ]]: '''Arcus''') ᎠᎪᎢ ᎤᏁᎳᏅᎯ ᎠᎨᏴ [[ᎤᏅᎪᎳᏛ]].
 
-[[Category:ᎠᏂᎪᎢ ᎤᎾᏁᎳᏅᎯ]]
+[[Category:ᎠᏂᎪᎢ ᎤᎾᏁᎳᏅᎯ ᎠᏂᎨᏴ]]
 
 [[az:İrida]]
 [[bg:Ирида]]
