*Empty MediaWiki Message*

--- a/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
+++ b/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
@@ -142,10 +142,12 @@
 ** ᎪᏔᏏ (Κόττος)
 ** ᏣᎢᏥᏏ (Γύγης)
 
-* [[Cyclopes]] (Κύκλωψ)
+* [[Cyclopes|ᎠᏂᏌᎢᏠᏈ]] (Κύκλωψ)
 ** ᎠᏥᏏ (Ἄργης)
 ** ᏆᏂᏘᏏ(Βρόντης)
 ** ᏍᏖᎶᏈ (Στερόπης)
+
+[[Category:ᎠᏂᎪᎢ ᎤᏂᏃᎮᎸᎯ]]
 
 [[af:Griekse mitologie]]
 [[als:Griechische Mythologie]]
