*Empty MediaWiki Message*

--- a/ᎠᎢᎵᏏ.mw
+++ b/ᎠᎢᎵᏏ.mw
@@ -6,7 +6,7 @@
 | align="center" width="140px" | <big><big>'''ᎠᎢᎵᏏ'''</big></big>
 |}
 |-
-| align=center colspan=2 | [[File:Guerin_Pierre_Narcisse_-_Morpheus_and_Iris_1811.jpg|200px]] <br> ''[[ᎼᏈᎠᏏ]] ᎠᎴ ᎠᎢᎵᏏ, 1811 [[Pierre Narcisse Guérin|ᏈᎡᎠ ᎾᏏᏌ ᎨᎵᏂ]]
+| align=center colspan=2 | [[File:Guerin_Pierre_Narcisse_-_Morpheus_and_Iris_1811.jpg|200px]] <br> ''[[ᎼᏈᏯᏏ]] ᎠᎴ ᎠᎢᎵᏏ, 1811 [[Pierre Narcisse Guérin|ᏈᎡᎠ ᎾᏏᏌ ᎨᎵᏂ]]
 |-
 | '''ᎤᏙᏓ ᎠᎴ ᎤᏥ''' || [[Thaumas|ᏓᎹᏏ]] ᎠᎴ [[Electra|ᎡᎴᎧᏝ]]
 |-
