*Empty MediaWiki Message*

--- a/ᎠᎢᎵᏏ.mw
+++ b/ᎠᎢᎵᏏ.mw
@@ -16,6 +16,8 @@
 
 <big>'''ᎠᎢᎵᏏ'''</big> ([[ᎪᎢ]]: ''''Ιρις''' ''Íris''; [[ᎶᎻ]]: '''Arcus''') ᎠᎪᎢ ᎤᏁᎳᏅᎯ ᎠᎨᏴ [[ᎤᏅᎪᎳᏛ]].
 
+
+[[Category:ᎠᏂᎪᎢ ᎤᏂᏃᎮᎸᎯ]]
 [[Category:ᎠᏂᎪᎢ ᎤᎾᏁᎳᏅᎯ ᎠᏂᎨᏴ]]
 
 [[az:İrida]]
