*Empty MediaWiki Message*

--- a/ᎠᏉᎳ.mw
+++ b/ᎠᏉᎳ.mw
@@ -6,7 +6,7 @@
 | align="center" width="140px" | <big><big>'''ᎠᏉᎶ (ᎠᏉᎶ)'''</big></big>
 |}
 |-
-| align=center colspan=2 | [[File:Apollo_ny_carlsberg_glyptotek.jpg|200px]] <br> '''ᎤᏁᎳᏅᎯ ᎠᏨᏍᏛ'''
+| align=center colspan=2 | [[File:Belvedere Apollo Pio-Clementino Inv1015.jpg|150px]] <br> '''ᎤᏁᎳᏅᎯ ᎠᏨᏍᏛ'''
 |-
 | '''ᎤᏙᏓ ᎠᎴ ᎤᏥ''' || [[Zeus|ᏑᏍ]] ᎠᎴ [[Leto|ᎵᏙ]]
 |-
