*Empty MediaWiki Message*

--- a/ᎠᏉᎳ.mw
+++ b/ᎠᏉᎳ.mw
@@ -12,7 +12,7 @@
 |-
 | '''ᎤᏂᏙᎢ''' || [[Artemis|ᎠᏖᎻᏏ]]
 |-
-| '''ᏗᏂᏲᎵ''' || [[Asclepius|ᎠᏍᏞᏈᏯᏏ]], [[Troilus|ᏠᎢᎳᏏ]], [[Aristaeus|ᎡᎵᏍᏖᏯᏏ]], [[Orpheus|ᎣᏈᏯᏏ]]
+| '''ᏗᏂᏲᎵ''' || [[Asclepius|ᎠᏍᏞᏈᏯᏏ]] ᎠᎴ [[Troilus|ᏠᎢᎳᏏ]] ᎠᎴ [[Aristaeus|ᎡᎵᏍᏖᏯᏏ]] ᎠᎴ [[Orpheus|ᎣᏈᏯᏏ]]
 |-
 | '''ᎶᎻ ᏚᏙᎥ''' || [[ᎠᏉᎶ]]
 |}
