--- a/ᎠᏉᎳ.mw
+++ b/ᎠᏉᎳ.mw
@@ -3,7 +3,7 @@
 | style="background:#cef2e0;" align="center" colspan=2 |
 {| border="0" cellpadding="1" cellspacing="0"
 |-
-| align="center" width="140px" | <big><big>'''ᎠᏉᎶ (ᎠᏉᎶ)'''</big></big>
+| align="center" width="140px" | <big><big>'''ᎠᏉᎳ (ᎠᏉᎶ)'''</big></big>
 |}
 |-
 | align=center colspan=2 | [[File:Belvedere Apollo Pio-Clementino Inv1015.jpg|150px]] <br> '''ᎤᏁᎳᏅᎯ ᎠᏨᏍᏛ'''
