*Empty MediaWiki Message*

--- a/ᎠᏂᎪᎢ.mw
+++ b/ᎠᏂᎪᎢ.mw
@@ -75,4 +75,56 @@
 |-
 |}
 
-<big>'''ᎠᏂᏲᎾ'''</big> ᎠᏂᏴᏩ [[ᏲᏂᏱ]] ᎡᎯ. ᎠᏂᏲᎾ [[ᎠᏂᏲᎾ ᎧᏬᏂᎯᏍᏗ|ᏲᏂ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᎪᎢ'''</big> ᎠᏂᏴᏩ [[ᎪᎢ]] ᎡᎯ. ᎠᏂᎪᎢ [[ᎠᏂᎪᎢ ᎧᏬᏂᎯᏍᏗ|ᎪᎢ]] ᎠᏂᏬᏂᎭ.
+
+
+[[ar:يونانيون]]
+[[an:Griegos]]
+[[arc:ܝܘܢܝܐ]]
+[[av:Грекал]]
+[[az:Yunanlar]]
+[[be:Грэкі]]
+[[bg:Гърци]]
+[[bs:Grci]]
+[[ca:Grecs]]
+[[cs:Řekové]]
+[[da:Grækerne]]
+[[de:Griechen]]
+[[et:Kreeklased]]
+[[el:Έλληνες]]
+[[en:Greeks]]
+[[eo:Grekoj]]
+[[fr:Grecs]]
+[[fy:Griken]]
+[[ko:그리스인]]
+[[hy:Հույներ]]
+[[hr:Grci]]
+[[id:Bangsa Yunani]]
+[[os:Грекъаг адæм]]
+[[it:Greci]]
+[[he:יוונים]]
+[[ka:ბერძნები]]
+[[la:Graeci]]
+[[lv:Grieķi]]
+[[lt:Graikai]]
+[[hu:Görögök]]
+[[mk:Грци]]
+[[ml:യവനൻ]]
+[[ms:Orang Greek]]
+[[nl:Grieken]]
+[[ja:ギリシャ人]]
+[[no:Grekere]]
+[[pl:Grecy]]
+[[pt:Gregos]]
+[[ru:Греки]]
+[[sq:Grekët]]
+[[sk:Gréci]]
+[[sl:Grki]]
+[[sr:Грци]]
+[[fi:Kreikkalaiset]]
+[[sv:Greker]]
+[[tr:Yunanlar]]
+[[uk:Греки]]
+[[vi:Người Hy Lạp]]
+[[yo:Àwọn Gríìkì]]
+[[zh:希臘人]]
