*Empty MediaWiki Message*

--- a/ᎠᏂᎪᎢ.mw
+++ b/ᎠᏂᎪᎢ.mw
@@ -60,7 +60,7 @@
    <td><small>[[File:Eleftherios_Venizelos.jpg|60x70px]]</small></td>
    <td><small>[[File:Cavafy_bust.jpg|60x70px]]</small></td>
    <td><small>[[File:Georgios_Papanikolaou_stamp_(cropped).jpg|60x70px]]</small></td>
-   <td><small>[[File:Makarios_III_and_Robert_F._Wagner_NYWTS_cropped.jpg|60x70px]]</small></td>
+   <td><small>[[File:Bundesarchiv_B_145_Bild-F013046-0009,_München,_Staatsbesuch_Präsident_von_Zypern.jpg|60x70px]]</small></td>
    </td>
  <tr>
    <td><small><div style="background-color:#fee8ab">[[Georgios Karaiskakis|ᏣᏥᎣᏏ ᎧᎳᎢᏍᎧᎩᏏ]]</small></td>
