*Empty MediaWiki Message*

--- a/ᎠᏂᎪᎢ.mw
+++ b/ᎠᏂᎪᎢ.mw
@@ -18,7 +18,7 @@
   <tr>
     <td><small><div style="background-color:#fee8ab">[[Homer|ᎰᎹ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Leonidas I|ᎤᎬᏫᏳᎯ ᎵᎣᎾᎢᏓᏏ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Pericles|ᏇᎵᏟᏏ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Pericles|ᏇᎳᏟᏏ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Herodotus|ᎮᎳᏓᏔᏏ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Hippocrates|ᎯᏆᏝᏘᏏ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Socrates|ᏌᏝᏘᏏ]]</small></td>
