*Empty MediaWiki Message*

--- a/ᎪᎢᎯ.mw
+++ b/ᎪᎢᎯ.mw
@@ -4,7 +4,7 @@
 | ᎦᏓᏘ = Flag_of_Greece.svg
 | Coat of arms = Coat_of_arms_of_Greece.svg
 | Location = EU-Greece.svg
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᎪᎢ ᎦᏬᏂᎯᏍᏗ|ᎪᎢ]]
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᎪᎢ ᎧᏬᏂᎯᏍᏗ|ᎪᎢ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Athens|ᎡᏗᏂᏱ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᎡᏗᏂᏱ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Karolos Papoulias|ᎧᎶᎶᏏ ᏆᏊᎵᎠᏏ]] <br> [[Lucas Papademos|ᎷᎧᏏ ᏆᏆᏗᎼᏏ]]
