*Empty MediaWiki Message*

--- a/ᎠᏂᏲᎾ.mw
+++ b/ᎠᏂᏲᎾ.mw
@@ -106,6 +106,8 @@
 
 <big>'''ᎠᏂᏲᎾ'''</big> ᎠᏂᏴᏩ [[ᏲᏂᏱ]] ᎡᎯ. ᎠᏂᏲᎾ [[ᎠᏂᏲᎾ ᎧᏬᏂᎯᏍᏗ|ᏲᏂ]] ᎠᏂᏬᏂᎭ.
 
+[[Category:ᎠᏂᏴᏫ]]
+
 [[kbd:Урысхэр]]
 [[af:Russe]]
 [[ar:روس]]
