*Empty MediaWiki Message*

--- a/ᎠᏂᎬᎾ.mw
+++ b/ᎠᏂᎬᎾ.mw
@@ -62,6 +62,8 @@
 
 <big>'''ᎠᏂᎬᎾ'''</big> ᎠᏂᏴᏩ [[ᎬᏂᏱ]] ᎡᎯ. ᎠᏂᎬᎾ [[ᎠᏂᎬᎾ ᎧᏬᏂᎯᏍᏗ|ᎬᏂ]] ᎠᏂᏬᏂᎭ.
 
+[[Category:ᎠᏂᏴᏫ]]
+
 [[ar:أتراك]]
 [[an:Turcos anatolians]]
 [[arc:ܥܡܐ ܛܘܪܩܝܐ]]
