*Empty MediaWiki Message*

--- a/ᎠᏂᏉᏧᎦᎵ.mw
+++ b/ᎠᏂᏉᏧᎦᎵ.mw
@@ -61,6 +61,8 @@
 
 <big>'''ᎠᏂᏉᏧᎦᎵ'''</big> ᎠᏂᏴᏩ [[ᏉᏧᎦᎵ]] ᎡᎯ. ᎠᏂᏉᏧᎦᎵ [[ᎠᏂᏉᏧᎦᎵ ᎧᏬᏂᎯᏍᏗ|ᏉᏧᎦᎵ]] ᎠᏂᏬᏂᎭ.
 
+[[Category:ᎠᏂᏴᏫ]]
+
 [[af:Portugese]]
 [[ar:برتغاليون]]
 [[az:Portuqallar]]
