*Empty MediaWiki Message*

--- a/ᎠᏂᏆᏏᎵ.mw
+++ b/ᎠᏂᏆᏏᎵ.mw
@@ -61,6 +61,8 @@
 
 <big>'''ᎠᏂᏆᏏᎵ'''</big> ᎠᏂᏴᏩ [[ᏆᏏᎵ]] ᎡᎯ. ᎠᏂᏆᏏᎵ [[ᎠᏂᏉᏧᎦᎵ ᎧᏬᏂᎯᏍᏗ|ᏉᏧᎦᎵ]] ᎠᏂᏬᏂᎭ.
 
+[[Category:ᎠᏂᏴᏫ]]
+
 [[en:Brazilian people]]
 [[eo:Brazilanoj]]
 [[et:Brasiillased]]
