--- a/ᎠᏂᎺᏏᎪ.mw
+++ b/ᎠᏂᎺᏏᎪ.mw
@@ -76,7 +76,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᏍᏫᏏ'''</big> ([[ᎠᏂᏙᎢᏥ ᎧᏬᏂᎯᏍᏗ|ᏙᎢᏥ]]: ''die Schweizer'', [[ᎠᏂᎦᎸᏥ|ᎦᎸᏥ]]: ''les Suisses'', [[ᎠᏂᎢᏓᎵ|ᎢᏓᎵ]]: ''gli Svizzeri'', [[ᎶᎹᏂᏥ ᎧᏬᏂᎯᏍᏗ|ᎶᎹᏂᏥ]]: ''ils Svizzers'') ᎠᏂᏴᏩ [[ᏍᏫᏣᎳᏂ]] ᎡᎯ. ᎠᏂᏍᏫᏏ [[ᎠᏂᏙᎢᏥ ᎧᏬᏂᎯᏍᏗ|ᏙᎢᏥ]] ᎠᎴ [[ᎠᏂᎦᎸᏥ ᎧᏬᏂᎯᏍᏗ|ᎦᎸᏥ]] ᎠᎴ [[ᎠᏂᎢᏓᎵ ᎧᏬᏂᎯᏍᏗ|ᎢᏓᎵ]] ᎠᎴ [[ᎶᎹᏂᏥ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᎺᏏᎪ'''</big> ᎠᎴ <big>'''ᎠᏂᎺᏏᏅᏟ'''</big> ([[ᎠᏂᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ|ᏙᎢᏥ]]: ''Mexicanos'') ᎠᏂᏴᏩ [[ᎺᏏᎪ]] ᎡᎯ. ᎠᏂᏍᏫᏏ [[ᎠᏂᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ|ᏍᏆᏂ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
