*Empty MediaWiki Message*

--- a/ᎠᏂᎺᏏᎪ.mw
+++ b/ᎠᏂᎺᏏᎪ.mw
@@ -64,12 +64,12 @@
     <td>[[File:Fernando_Valenzuela_in_bullpen.jpg|60x70px]]</td>
   </tr>
   <tr>
-    <td><small><div style="background-color:#fee8ab">[[Frida Kahlo|ᎮᏁᏫ ᏚᎾᏂ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Frida Kahlo|ᏈᏓ ᎧᎶ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Romulo Diaz de la Vega|ᎶᎽᎶ ᏗᎠᏏ Ꮥ Ꮃ ᏪᎦ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Paulina Rubio|ᏉᎵᎾ ᎷᏈᎣ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Salma Hayek|ᏉᎳ ᏗᎳᎩ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Thalia Sodi|ᎥᏑᎳ ᎡᏂᏓᏪᏏ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Fernando Valenzuela|ᏬᏣ ᏪᏕᏩ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Salma Hayek|ᏌᎵᎹ ᎭᏰᎩ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Thalia Sodi|ᏔᎵᏯ ᏐᏗ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Fernando Valenzuela|ᏮᎾᏂᏙ ᏩᎴᏂᏍᏪᎳ]]</small></td>
   </tr>
   <tr>
   </table>
