--- a/ᏆᎳᎩ_ᎣᏆᎹ.mw
+++ b/ᏆᎳᎩ_ᎣᏆᎹ.mw
@@ -24,7 +24,9 @@
 |-
 |}
 
-<big>'''ᏆᎳᎩ ᎣᏆᎹ'''</big> ([[ᏲᏁᎦ]]: ''Barack Obama''; ᎦᎶᏂ 4‚ 1961) ᎠᎵᏱᎵᏒᎧᏃᎮᏗ [[ᎠᎺᎵᎨ ᎤᏂᎬᏫᏳᎯ|ᎠᎺᎵᎨ ᎤᎬᏫᏳᎯ]].
+<big>'''ᏆᎳᎩ ᎣᏆᎹ'''</big> ([[ᏲᏁᎦ]]: ''Barack Obama''; ᎦᎶᏂ 4‚ 1961) ᎠᎵᏱᎵᏒᎧᏃᎮᏗ [[ᎠᎺᎵᎨ ᎤᏂᎬᏫᏳᎯ|ᎠᎺᎵᎨ ᎤᎬᏫᏳᎯ]] ᎠᎴ ᎢᎬᏱᎢ ᎠᎬᎿᎨᎢ ᎠᎺᎵᎨ ᎤᎬᏫᏳᎯ ᎨᏎᎢ. 
+
+ᎾᏍᎪᏅᎩᏁ ᎤᎬᏫᏱᎯ [[Barack Obama|ᏆᎳᎩ ᎣᏆᎹ]] ᏚᏙᎠ. ᏐᏁᎳᏚ ᎢᏍᎪᎯᏍᏆ ᏑᏓᎵᏍᎪ ᏌᏊᎯᏁ ᎤᏕᏁᎢ. ᏍᎦᏚᎩ ᎤᏕᏅ ᎭᏩᏱ ᎠᏃᏎᎰ. [[Michelle LaVaughn Robinson Obama|ᎻᏎᎵ ᎳᏩᏂ ᏬᏈᏂᏌᏂ ᎣᏆᎹ]] ᏚᏙᎠ ᎤᏍᏓᏴᎲᏍᎩ. ᎾᏍᎪᏣᏁᎴ ᏳᏕᏘᏴᏓ ᎨᏎᎢ ᎤᎬᏫᏳ ᎤᏓᏴᏎᎳ. ᏏᏍᎩᎾ ᎤᎬᏫᏳᎯ ᎪᎯᏥᎩ. ᎠᏴᎤᎢ ᎠᎬᎾᎨ ᎤᎬᏫᏳᎯ ᎤᏴᏢᎯ. ᎤᎦᎾᏩ Ꮧ.
 
 [[ab:Барақ Обама]]
 [[af:Barack Obama]]
