*Empty MediaWiki Message*

--- a/ᎠᎺᏉ_ᎠᎨᏴ.mw
+++ b/ᎠᎺᏉ_ᎠᎨᏴ.mw
@@ -1,1 +1,44 @@
+[[File:John_Collier_-_The_Land_Baby.jpg|thumb|150px|ᎠᎺᏉ ᎠᎨᏴ]]
 
+<big>'''ᎠᎺᏉ ᎠᎨᏴ'''</big> ᎠᏣᏗ ᎠᏂᏴᏫ.
+
+
+[[ang:Meremæȝden]]
+[[ar:حورية البحر]]
+[[az:Su pərisi]]
+[[bn:মৎস্যকণ্যা]]
+[[cs:Mořská panna]]
+[[da:Havfrue]]
+[[de:Meerjungfrau]]
+[[en:Mermaid]]
+[[es:Sirena]]
+[[fa:پری دریایی]]
+[[fo:Havfrúgv]]
+[[ga:Maighdean mhara]]
+[[gd:Maighdean-mhara]]
+[[ko:인어]]
+[[id:Putri duyung]]
+[[is:Hafmey]]
+[[he:בת ים (מיתולוגיה)]]
+[[ka:ქალთევზა]]
+[[lv:Nāra]]
+[[hu:Sellő]]
+[[ml:മത്സ്യകന്യക]]
+[[ms:Ikan duyung]]
+[[ne:जलपरी]]
+[[nl:Zeemeermin]]
+[[ja:人魚]]
+[[no:Havfrue]]
+[[sk:Morská panna]]
+[[so:Gabareey-maanyo]]
+[[fi:Merenneito]]
+[[sv:Sjöjungfru]]
+[[te:జల కన్యలు]]
+[[th:เงือก]]
+[[tr:Deniz kızı]]
+[[ur:جل پری]]
+[[zh-classical:人魚]]
+[[vls:Zeemarminne]]
+[[wuu:美人魚]]
+[[zh-yue:美人魚]]
+[[zh:人魚]]
