*Empty MediaWiki Message*

--- a/ᎠᏂᎺᏏᎪ.mw
+++ b/ᎠᏂᎺᏏᎪ.mw
@@ -1,1 +1,90 @@
+{| border=1 align=right cellpadding=4 cellspacing=0 width=400 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|-
+| style="background:#f9f9f9;" align="center" colspan=2 |
+{| border="0" cellpadding="1" cellspacing="0"
+|-
+| align="center" width="140px" | <big><big><big>'''ᎠᏂᎺᏏᎪ (ᎠᏂᎺᏏᏅᏟ)''' </big></big></big> <br> <big>'''''Mexicanos'''''</big>
+|}
+|-
+| align=center colspan=2 |<table border=0 align="center">
+  <tr> 
+    <td>[[File:Don_Miguel_Hidalgo.jpg|60x70px]]</td>
+    <td>[[File:Iturbide Emperador by Josephus Arias Huerta.jpg|60x70px]]</td>
+    <td>[[File:Rulfo por Lyon.jpg|60x70px]]</td>
+    <td>[[File:GuadVictoriaChurubuscoDF.JPG|60x70px]]</td>
+    <td>[[File:Paz0.jpg|60x70px]]</td>
+    <td>[[File:Benito Juarez Presidente.jpg|60x70px]]</td>
+  </tr>
+  <tr>
+    <td><small><div style="background-color:#fee8ab">[[Miguel Hidalgo|ᎻᎨᎵ ᎯᏓᎵᎪ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Agustin de Iturbide|ᎠᎫᏍᏘᏂ Ꮥ ᎢᏛᏈᏕ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Juan Rulfo|ᎱᏩᏂ ᎷᎵᏬ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Guadalupe Victoria|ᏆᏓᎷᏇ ᏫᎩᏙᎵᏯ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Octavio Paz|ᎣᎧᏔᏫᎣ ᏆᏏ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Benito Juárez|ᏇᏂᏙ ᎱᎠᎴᏏ]]</small></td>
+  </tr>
+  <tr>
+<td><small>[[File:Mexico.RodolfoNeriVela.01.jpg|60x70px]]</small></td>
+    <td>[[File:Andres Pico.jpg|60x70px]]</td>
+    <td>[[File:Porfirio Diaz in uniform.jpg|60x70px]]</td>
+    <td>[[File:General_Juan_Bautista_Ceballos.jpg|60x70px]]</td>
+    <td>[[File:Pancho villa horseback.jpg|60x70px]]</td>
+    <td>[[File:Felix_Maria_Zuloaga.jpg|60x70px]]</td>
+  </tr>
+  <tr>
+    <td><small><div style="background-color:#fee8ab">[[Rodolfo Neri Vela|ᎶᏙᎵᏬ ᏁᎵ ᏪᎳ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Andrés Pico|ᎠᏂᏗᏪᏏ ᏈᎪ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Porfirio Díaz|ᏉᏫᎵᎣ ᏗᎠᏏ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Juan Bautista Ceballos|ᎱᏩᏂ ᏆᎤᏘᏍᏔ ᏎᏆᏲᏏ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Pancho Villa|ᏆᏂᏦ ᏫᎳ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Felix Zuloaga|ᏪᎵᎩᏏ ᏑᎶᎠᎦ]]</small></td>
+  </tr>
+  <tr>
+<td><small>[[File:XimenaLV.jpg|60x70px]]</small></td>
+    <td>[[File:Motecuzoma Xocoyotzin.jpeg|60x70px]]</td>
+    <td>[[File:Carlos Fuentes.jpg|60x70px]]</td>
+    <td>[[File:Carlos Slim Helú.jpg|60x70px]]</td>
+    <td>[[File:Juana Inés de la Cruz.jpg|60x70px]]</td>
+    <td>[[File:Luismiguel9900.jpg|60x70px]]</td>
+  </tr>
+  <tr>
+    <td><small><div style="background-color:#fee8ab">[[Ximena Navarrete|ᎯᎺᎾ ᎾᏩᎴᏖ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Montezuma II|ᎹᏂᏖᏑᎹ II]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Carlos Fuentes|ᎧᎶᏏ ᏪᏂᏖᏏ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Carlos Slim|ᎧᎶᏏ ᏍᎵᎻ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Juana Ines de la Cruz|ᎱᏩᎾ ᎢᏁᏏ Ꮥ Ꮃ ᏡᏏ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Luis Miguel|ᎷᏫ ᎻᎨᎵ]]</small></td>
+  </tr>
+  <tr>
+<td><small>[[File:Frida_Kahlo_Diego_Rivera_1932.jpg|60x70px]]</small></td>
+    <td>[[File:Rómulo_Díaz_de_la_Vega.PNG|60x70px]]</td>
+    <td>[[File:Paulina_Rubio_@_Asics_Music_Festival_06.jpg|60x70px]]</td>
+    <td>[[File:Salma_Hayek_Cannes_2010.jpg|60x70px]]</td>
+    <td>[[File:ThaliaSodi_cropped.jpg|60x70px]]</td>
+    <td>[[File:Fernando_Valenzuela_in_bullpen.jpg|60x70px]]</td>
+  </tr>
+  <tr>
+    <td><small><div style="background-color:#fee8ab">[[Frida Kahlo|ᏈᏓ ᎧᎶ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Romulo Diaz de la Vega|ᎶᎽᎶ ᏗᎠᏏ Ꮥ Ꮃ ᏪᎦ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Paulina Rubio|ᏉᎵᎾ ᎷᏈᎣ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Salma Hayek|ᏌᎵᎹ ᎭᏰᎩ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Thalia Sodi|ᏔᎵᏯ ᏐᏗ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Fernando Valenzuela|ᏮᎾᏂᏙ ᏩᎴᏂᏍᏪᎳ]]</small></td>
+  </tr>
+  <tr>
+  </table>
+|-
+|}
 
+<big>'''ᎠᏂᎺᏏᎪ'''</big> ᎠᎴ <big>'''ᎠᏂᎺᏏᏅᏟ'''</big> ([[ᎠᏂᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ|ᏙᎢᏥ]]: ''Mexicanos'') ᎠᏂᏴᏩ [[ᎺᏏᎪ]] ᎡᎯ. ᎠᏂᏍᏫᏏ [[ᎠᏂᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ|ᏍᏆᏂ]] ᎠᏂᏬᏂᎭ.
+
+[[Category:ᎠᏂᏴᏫ]]
+
+[[cbk-zam:Mexicanos]]
+[[en:Mexican people]]
+[[es:Mestizaje en México]]
+[[ko:멕시코인]]
+[[ka:მექსიკელები]]
+[[nah:Mēxihcah]]
+[[pt:Mexicanos]]
+[[ru:Мексиканцы]]
