*Empty MediaWiki Message*

--- a/ᎠᏂᎺᏏᎪ.mw
+++ b/ᎠᏂᎺᏏᎪ.mw
@@ -18,10 +18,10 @@
   <tr>
     <td><small><div style="background-color:#fee8ab">[[Miguel Hidalgo|ᎻᎨᎵ ᎯᏓᎵᎪ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Agustin de Iturbide|ᎠᎫᏍᏘᏂ Ꮥ ᎢᏛᏈᏕ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Juan Rulfo|ᎱᏩᏂ ᎷᎵᏬ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Guadalupe Victoria|ᏆᏓᎷᏇ ᏫᎩᏙᎵᏯ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Octavio Paz|ᎣᎧᏔᏫᎣ ᏆᏏ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Benito Juárez|ᏇᏂᏙ ᎱᎠᎴᏏ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Juan Rulfo|ᏩᏂ ᎷᎵᏬ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Guadalupe Victoria|ᏆᏓᎷᏇ ᏫᎩᏙᏫᏯ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Octavio Paz|ᎣᎧᏖᏫᏲ ᏆᏏ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Benito Juárez|ᏇᏂᏙ ᏩᎴᏏ]]</small></td>
   </tr>
   <tr>
 <td><small>[[File:Mexico.RodolfoNeriVela.01.jpg|60x70px]]</small></td>
@@ -32,12 +32,12 @@
     <td>[[File:Felix_Maria_Zuloaga.jpg|60x70px]]</td>
   </tr>
   <tr>
-    <td><small><div style="background-color:#fee8ab">[[Rodolfo Neri Vela|ᎶᏙᎵᏬ ᏁᎵ ᏪᎳ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Andrés Pico|ᎠᏂᏗᏪᏏ ᏈᎪ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Porfirio Díaz|ᏉᏫᎵᎣ ᏗᎠᏏ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Juan Bautista Ceballos|ᎱᏩᏂ ᏆᎤᏘᏍᏔ ᏎᏆᏲᏏ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Rodolfo Neri Vela|ᎶᏙᏬ ᏁᎵ ᏪᎳ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Andrés Pico|ᎡᏂᏗᏪᏏ ᏈᎪ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Porfirio Díaz|ᏉᏫᎵᏲ ᏗᎠᏏ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Juan Bautista Ceballos|ᏩᏂ ᏆᏘᏍᏔ ᏎᏆᏲᏏ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Pancho Villa|ᏆᏂᏦ ᏫᎳ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Felix Zuloaga|ᏪᎵᎩᏏ ᏑᎶᎠᎦ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Felix Zuloaga|ᏈᎵᏏ ᏑᎶᎠᎦ]]</small></td>
   </tr>
   <tr>
 <td><small>[[File:XimenaLV.jpg|60x70px]]</small></td>
@@ -52,7 +52,7 @@
     <td><small><div style="background-color:#fee8ab">[[Montezuma II|ᎹᏂᏖᏑᎹ II]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Carlos Fuentes|ᎧᎶᏏ ᏪᏂᏖᏏ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Carlos Slim|ᎧᎶᏏ ᏍᎵᎻ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Juana Ines de la Cruz|ᎱᏩᎾ ᎢᏁᏏ Ꮥ Ꮃ ᏡᏏ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Juana Ines de la Cruz|ᏩᎾ ᎠᎢᏁᏏ Ꮥ Ꮃ ᏡᏏ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Luis Miguel|ᎷᏫ ᎻᎨᎵ]]</small></td>
   </tr>
   <tr>
