*Empty MediaWiki Message*

--- a/ᎠᏂᏍᏆᏂ.mw
+++ b/ᎠᏂᏍᏆᏂ.mw
@@ -28,7 +28,7 @@
   <tr>
     <td><small>[[Ignatius Loyola|ᎢᎩᏁᏏᏯᏏ ᎶᏲᎳ]]</small></td>
     <td><small>[[Teresa of Ávila|ᏖᏫᏌ ᎠᏫᎳ ᎡᎯ]]</small></td>
-    <td><small>[[Cervantes|ᏒᏩᏂᏘᏏ]]</small></td>
+    <td><small>[[Cervantes|ᏒᏩᏂᏘᏏ]]</small></td> 
     <td><small>[[Francisco Goya|ᎦᎸᏥᏍᎪ ᎪᏯ]]</small></td>
   <tr> 
   <tr>
@@ -41,7 +41,7 @@
     <td><small>[[Rosalía de Castro|ᏬᏌᎵᏯ Ꮥ ᎧᏍᏠ]]</small></td>
     <td><small>[[Pablo Picasso|ᏆᏆᎶ ᏈᎧᏐ]]</small></td>
     <td><small>[[Salvador Dalí|ᏌᎵᏩᏙᎠ ᏓᎵ]]</small></td>
-    <td><small>[[Charo|ᏣᎶ]]</small></td>  
+    <td><small>[[Charo|ᏣᎶ]]</small></td>
   </tr>
   <tr>
     <td>[[File:Plácido_Domingo,_2008.jpg|55x63px]]</td>
@@ -51,9 +51,9 @@
      </tr>
   <tr>
    <td><small>[[Placido Domingo|ᏝᏏᏙ ᏙᎻᏂᎪ]]</small></td>
-   <td><small>[[Julio Iglesias|ᎱᎵᎣ ᎢᎩᎴᏏᎠᏏ]]</small></td>
+   <td><small>[[Julio Iglesias|ᎱᎵᏲ ᎢᎩᎴᏏᎠᏏ]]</small></td>
    <td><small>[[Antonio Banderas|ᎡᏂᏙᏂᏲ ᏆᏂᏕᎳᏏ]]</small></td>
-   <td><small>[[Penelope Cruz|ᏇᏁᎶᏈ ᏡᏏ]]</small></td> 
+   <td><small>[[Penelope Cruz|ᏇᏁᎶᏈ ᏡᏏ]]</small></td>
   <tr>
   </table>
 |-
