*Empty MediaWiki Message*

--- a/ᎡᏆ_ᎦᏙᎯ.mw
+++ b/ᎡᏆ_ᎦᏙᎯ.mw
@@ -1,13 +1,13 @@
 [[File:Continents vide couleurs.png|thumb|400px|ᎡᏆ ᎦᏙᎯ]]
 ᎯᎠ ᎦᎵᏉᎨ '''ᎡᏆ ᎦᏙᎯ'''. ᎠᎴ ᎠᏂᏴᏫ Oceania ᏯᏓᎭᎢ ᎠᏎᏍᏗᎭ.
 
-# [[ᏓᎶᏂᎦᏍᏛ]]
-# [[ᎬᎿᎦᏍᏛ]]
+# [[ᎡᏏᏱ]] ᎠᎴ ᏓᎶᏂᎦᏍᏛ
+# [[ᎠᎱᎵᎧ]] ᎠᎴ ᎬᎿᎦᏍᏛ
 # [[ᏒᎳᏗᏝ]]
 # [[ᏧᎦᎾᏮ ᎠᎹᏰᎵ]]
 # [[ᏧᏁᏍᏓᎸ]]
 # [[ᏧᏴᏢ ᎠᎹᏰᎵ]]
-# [[ᏳᎳᏛ]]<ref>Handouts from the [http://www.cherokee.org/Culture/LanguageList/Default.aspx ᏣᎳᎩᎯ ᎠᏰᎵ Cultural Resource Center: Language Services]. 2009</ref>
+# [[ᏳᎳᏈ]] ᎠᎴ ᏳᎳᏛ<ref>Handouts from the [http://www.cherokee.org/Culture/LanguageList/Default.aspx ᏣᎳᎩᎯ ᎠᏰᎵ Cultural Resource Center: Language Services]. 2009</ref>
 
 ==ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ==
 *[[ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ]]
