*Empty MediaWiki Message*

--- a/ᎡᏏᏱ.mw
+++ b/ᎡᏏᏱ.mw
@@ -1,5 +1,5 @@
 [[File:Asia_(orthographic_projection).svg|right|240px|ᏓᎶᏂᎦᏍᏛ]]
-ᏓᎶᏂᎦᏍᏛ [[ᎡᏆ ᎦᏙᎯ]], ᎾᎥᏂᎨᏍᏙᏗ [[ᏳᎳᏛ]]. ᎤᏔᏂᎢᏍᏗ ᎡᏆ ᎦᏙᎯ ᎡᎶᎯ-Ꭿ.
+<big>'''ᎡᏏᏱ'''</big><ref>Cherokee New Testament</ref> ᎠᎴ ᏓᎶᏂᎦᏍᏛ [[ᎡᏆ ᎦᏙᎯ]], ᎾᎥᏂᎨᏍᏙᏗ [[ᏳᎳᏈ]]. ᎤᏔᏂᎢᏍᏗ ᎡᏆ ᎦᏙᎯ ᎡᎶᎯ-Ꭿ.
 
 == ᏓᎶᏂᎦᏍᏛ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ ==
 === ᎠᏰᎵ ᏓᎶᏂᎦᏍᏛ ===
@@ -72,6 +72,12 @@
 {{Commons|Asia|ᏓᎶᏂᎦᏍᏛ}}
 * [[ᎡᏆ ᎦᏙᎯ]]
 * [[ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ]]
+
+==ᏓᏓᏚᎬ==
+<references/>
+
+==ᏫᏓᏎᏄᎢ==
+*Cherokee New Testament. Tulsa Oklahoma, 1995
 
 [[Category:ᏓᎶᏂᎦᏍᏛ| ]]
 [[Category:ᎡᏆ ᎦᏙᎯ]]
