*Empty MediaWiki Message*

--- a/ᎢᏓᎵᏱ.mw
+++ b/ᎢᏓᎵᏱ.mw
@@ -1,23 +1,29 @@
 {{Infobox Country
 | Long name = Italia
-| Name = ᏲᎶ
+| Name = ᎢᏔᎵ
 | ᎦᏓᏘ = Flag of Italy.svg
 | Coat of arms = Italy-Emblem.svg
 | Location = EU-Italy.svg
 | Area = 99646
 | Population = 107,000,000
 | Population year = 
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎢᏔᎵᎠᏃ]]
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᎢᏔᎵ ᎧᏬᏂᎯᏍᏗ|ᎢᏔᎵ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Rome|ᎶᎻ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = [[Rome|ᎶᎻ]]
-| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = Giorgio Napolitano
-| ᎠᏕᎳ = ᎡᎶ
+| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Giorgio Napolitano|ᏔᏥᎣ ᎾᏆᎵᏔᏃ]]
+| ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
-'''ᏲᎶ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏛ]].
+<big>'''ᎢᏔᎵᏱ'''</big> (ᎠᎴ '''ᎢᏓᎵ'''<ref>Cherokee New Testament</ref> ᎠᎴ '''ᏲᎶ''' ᎠᎴ '''ᎬᏩᎵᏲᏥ''') ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏉᎢ]].
 
 == ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ ==
 {{Commonscat|Italy|ᏲᎶ}}
+
+==ᏓᏓᏚᎬ==
+<references/>
+
+==ᏫᏓᏎᏄᎢ==
+*Cherokee New Testament. Tulsa Oklahoma, 1995
 
 {{stub}}
 
