*Empty MediaWiki Message*

--- a/ᎢᏓᎵᏱ.mw
+++ b/ᎢᏓᎵᏱ.mw
@@ -1,6 +1,6 @@
 {{Infobox Country
 | Long name = Italia
-| Name = ᎢᏔᎵ
+| Name = ᎢᏔᎵᏱ
 | ᎦᏓᏘ = Flag of Italy.svg
 | Coat of arms = Italy-Emblem.svg
 | Location = EU-Italy.svg
