*Empty MediaWiki Message*

--- a/ᎠᏂᏕᏂ.mw
+++ b/ᎠᏂᏕᏂ.mw
@@ -17,7 +17,7 @@
     <td><small><div style="background-color:#fee8ab">[[Hans Christian Andersen|ᎭᏂᏏ ᏈᏍᏘᎠᏂ ᎡᏂᏓᏌᏂ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Niels Bohr|ᏂᎵᏏ ᏉᎠ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[H. C. Ørsted|Ꭽ. Ꮘ. ᎥᏍᏖᏗ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Sweyn Forkbeard|ᏍᏇᏂ ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Sweyn Forkbeard|ᏍᏇᏂ ᏴᎩ-ᎠᎭᏄᎸᏒ]]</small></td>
  </tr>
   <tr>
 <td><small>[[File:Peter_Schmeichel_juli_1991.JPG|60x70px]]</small></td>
