--- a/ᎠᏂᏕᏂ.mw
+++ b/ᎠᏂᏕᏂ.mw
@@ -36,7 +36,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᏕᏂ'''</big> ([[ᎠᏂᏕᏂ ᎧᏬᏂᎯᏍᏗ|ᏕᏂ]]: ''danskere'') ᎠᏂᏴᏩ [[ᏕᏂᎹᎩ]] ᎡᎯ. ᎠᏂᏕᏂ [[ᎠᏂᏕᏂ ᎧᏬᏂᎯᏍᏗ|ᏕᏂ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᏕᏂ'''</big> ([[ᎠᏂᏕᏂ ᎧᏬᏂᎯᏍᏗ|ᏕᏂᏏ]]: ''danskere'') ᎠᏂᏴᏩ [[ᏕᏂᎹᎩ]] ᎡᎯ. ᎠᏂᏕᏂ [[ᎠᏂᏕᏂ ᎧᏬᏂᎯᏍᏗ|ᏕᏂᏏ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
