*Empty MediaWiki Message*

--- a/ᎠᏂᏫᏂ.mw
+++ b/ᎠᏂᏫᏂ.mw
@@ -36,7 +36,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᏫᏂ'''</big> ([[ᎠᏂᏫᏂ ᎧᏬᏂᎯᏍᏗ|ᏫᏂ]]: ''suomalaiset'') ᎠᏂᏴᏩ [[ᏫᏂᎳᏂ]] ᎡᎯ. ᎠᏂᏫᏂ [[ᎠᏂᏫᏂ ᎧᏬᏂᎯᏍᏗ|ᏫᏂᏏ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᏫᏂ'''</big> ([[ᎠᏂᏫᏂ ᎧᏬᏂᎯᏍᏗ|ᏫᏂᏏ]]: ''suomalaiset'') ᎠᏂᏴᏩ [[ᏫᏂᎳᏂ]] ᎡᎯ. ᎠᏂᏫᏂ [[ᎠᏂᏫᏂ ᎧᏬᏂᎯᏍᏗ|ᏫᏂᏏ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
