*Empty MediaWiki Message*

--- a/ᏗᎧᏃᎩᏍᏗ.mw
+++ b/ᏗᎧᏃᎩᏍᏗ.mw
@@ -1,4 +1,4 @@
-[[File:Guitar_1.jpg|thumb|right|ᏗᎧᏃᎩᏍᏗ]]
+[[File:Guitar_1.jpg|thumb|right|ᏗᎧᏃᎩᏍᏗ|150px]]
 
 <big>'''ᏗᎧᏃᎩᏍᏗ'''</big> [[ᏗᎧᏃᎩᏛ ᎬᏔᏂᏓᏍᏗ]].
 
