*Empty MediaWiki Message*

--- a/ᎭᏩᏱ_ᏗᎧᏃᎩᏍᏗ.mw
+++ b/ᎭᏩᏱ_ᏗᎧᏃᎩᏍᏗ.mw
@@ -1,6 +1,6 @@
 [[File:Ukulele1_HiRes.jpg|thumb|right|ᏗᎧᏃᎩᏍᏗ|150px]]
 
-<big>'''ᎭᏩᏱ ᏗᎧᏃᎩᏍᏗ'''</big> ᎠᎴ <big>'''ᏳᎨᎴᎴ'''</big> ([[ᎠᏂᎭᏩᏱ ᎧᏬᏂᎯᏍᏗ|ᎭᏩᏱ]]: ''ʻUkulele''; [[ᎩᎵᏏ]]: ''Ukulele'' ᎠᎴ ''Ukelele'') [[ᏗᎧᏃᎩᏛ ᎬᏔᏂᏓᏍᏗ]] [[ᎭᏩᏱ]] ᎡᎯ.
+<big>'''ᎭᏩᏱ ᏗᎧᏃᎩᏍᏗ'''</big> ᎠᎴ <big>'''ᏳᎧᎴᎵ'''</big> ([[ᎠᏂᎭᏩᏱ ᎧᏬᏂᎯᏍᏗ|ᎭᏩᏱ]]: ''ʻUkulele''; [[ᎩᎵᏏ]]: ''Ukulele'' ᎠᎴ ''Ukelele'') [[ᏗᎧᏃᎩᏛ ᎬᏔᏂᏓᏍᏗ]] [[ᎭᏩᏱ]] ᎡᎯ.
 
 [[Category:ᏗᎧᏃᎩᏛ ᎬᏔᏂᏓᏍᏗ]]
 
