*Empty MediaWiki Message*

--- a/ᏍᏆᏂᏤᏍᏛᎢ.mw
+++ b/ᏍᏆᏂᏤᏍᏛᎢ.mw
@@ -1,4 +1,4 @@
-ᏍᏆᏂᏤᏍᏛᎢ (ᏄᏲᎩ, ᎠᏂᏍᏆᏂᎢ, NEW MEXICO) ᎦᏚᎲᎢ ᎡᏉ ᏄᏲᎪᎢ, ᏄᏲᎩ, [[ᎠᎹᏰᏟ]].
+<big>'''ᏍᏆᏂᏤᏍᏛᎢ'''</big> ᎠᎴ <big>'''ᏄᎺᏏᎪ'''</big> ᎠᎴ <big>'''ᎺᏏᎪᎢᏤᏍᏛᎢ'''</big> (ᏄᏲᎩ, ᎠᏂᏍᏆᏂᎢ, NEW MEXICO) ᎦᏚᎲᎢ ᎡᏉ ᏄᏲᎪᎢ, ᏄᏲᎩ, [[ᎠᎹᏰᏟ]].
 
 [[File:New Mexico state flag.png|none|thumb]]
 
