*Empty MediaWiki Message*

--- a/ᎠᏂᏆᏏᎵ.mw
+++ b/ᎠᏂᏆᏏᎵ.mw
@@ -63,20 +63,21 @@
 
 [[Category:ᎠᏂᏴᏫ]]
 
-[[en:Brazilian people]]
-[[eo:Brazilanoj]]
+
 [[et:Brasiillased]]
+[[eo:Brazilanoj]]
+[[ko:브라질인]]
 [[hr:Brazilci]]
+[[os:Бразилиæгтæ]]
 [[it:Brasiliani]]
 [[ka:ბრაზილიელები]]
 [[kk:Бразилиялықтар]]
-[[ko:브라질인]]
-[[os:Бразилиæгтæ]]
 [[pl:Brazylijczycy]]
 [[pt:Brasileiros]]
 [[ru:Бразильцы]]
 [[sah:Бразилианнар]]
-[[sh:Brazilci]]
 [[sl:Brazilci]]
 [[sr:Бразилци]]
+[[sh:Brazilci]]
+[[chr:ᎠᏂᏆᏏᎵ]]
 [[uk:Бразильці]]
