--- a/ᏧᏁᏍᏓᎸᎯ.mw
+++ b/ᏧᏁᏍᏓᎸᎯ.mw
@@ -1,4 +1,4 @@
 [[File:Flag of Iceland.svg|thumb|right|250px|ᎦᏓᏘ]]
-'''ᎤᏁᏍᏓᎶᎢ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏉᎢ]].
+'''ᎤᏁᏍᏓᎶᎢ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
 
 [[en:Iceland]]
