*Empty MediaWiki Message*

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -12,7 +12,7 @@
 * [[Azerbaijan|ᎠᏎᏆᏣᏂ]]
 * [[Estonia|ᎡᏍᏙᏂᏱ]]
 * [[Belarus|ᏇᎳᎷᏏ]]
-* [[Belgium|ᏇᎵᏣᎻ]]
+* [[Belgium|ᏇᎵᏨᎻ]]
 * [[Bosnia & Herzegovina|ᏆᏍᏂᏯ ᎠᎴ ᎲᏤᎪᏫᎾ]]
 * [[Bulgaria|ᏊᎵᎨᎵᏱ]]
 * [[Croatia|ᏉᎡᏏᏱ]]
