--- a/ᎹᏱᎩᎵ_(ᎤᎬᏫᏳᎯ_ᏗᎧᎿᏩᏗᏙᎯ).mw
+++ b/ᎹᏱᎩᎵ_(ᎤᎬᏫᏳᎯ_ᏗᎧᎿᏩᏗᏙᎯ).mw
@@ -40,7 +40,7 @@
 [[it:Arcangelo Michele]]
 [[ja:ミカエル]]
 [[ka:მიქაელ მთავარანგელოზი]]
-[[kk:Микаил]]
+[[kk:Михаил]]
 [[ko:미카엘 (대천사)]]
 [[ksh:Michael (Erzengel)]]
 [[ku:Mikaîl]]
