*Empty MediaWiki Message*

--- a/ᎹᏱᎩᎵ_(ᎤᎬᏫᏳᎯ_ᏗᎧᎿᏩᏗᏙᎯ).mw
+++ b/ᎹᏱᎩᎵ_(ᎤᎬᏫᏳᎯ_ᏗᎧᎿᏩᏗᏙᎯ).mw
@@ -1,7 +1,16 @@
-'''ᎹᎩ''' ᎤᎬᏫᏳᎯ ᎠᏂᏓᏪᎯ.
+[[File:Simon Ushakov Archangel Mikhail and Devil.JPG|ᎹᏱᎩᎵ|thumb|right]]
 
-[[File:Simon Ushakov Archangel Mikhail and Devil.JPG|ᎹᎩ|thumb|right]]
-[[File:Neunkirchen-am-Brand-Grabrelief-Kloster.jpeg|200px]]
+
+<big>'''ᎹᏱᎩᎵ'''</big><ref>Cherokee New Testament</ref> [[Archangel|ᎤᎬᏫᏳᎯ ᏗᎧᎿᏩᏗᏙᎯ]].
+
+[[File:Neunkirchen-am-Brand-Grabrelief-Kloster.jpeg|thumb|left|200px]]
+
+==ᏓᏓᏚᎬ==
+<references/>
+
+==ᏫᏓᏎᏄᎢ==
+*Cherokee New Testament. Tulsa Oklahoma, 1995
+
 {{stub}}
 
 [[Category:ᏧᎾᏁᏄᏗ ᏗᏁᎸᏙᏗ]]
