*Empty MediaWiki Message*

--- a/ᎹᏱᎩᎵ.mw
+++ b/ᎹᏱᎩᎵ.mw
@@ -1,1 +1,62 @@
-#REDIRECT [[ᎹᏱᎩᎵ (ᎤᎬᏫᏳᎯ ᏗᎧᎿᏗᏩᏙᎯ)]]
+{{Infobox given name
+| Name = ᎹᏱᎩᎵ (ᎹᎦᎵ)
+| original = מִיכָאֵל
+| picture = Mikharkhangel.jpg
+| caption = ''[[ᎹᏱᎩᎵ (ᎤᎬᏫᏳᎯ ᏗᎧᎿᏩᏗᏙᎯ)]]'', ~1400
+| ᎩᎵᏏ = Michael
+| ᏗᎦᎪᏗ = ᎠᏍᎦᏯ
+| ᎢᎦ =
+| ᎧᏬᏂᎯᏍᏗ = [[ᎠᏂᏈᎷ ᎧᏬᏂᎯᏍᏗ|ᏈᎷ]]
+| ᎾᎿᎢ =
+| ᎦᏛᎬᎢ =
+}}
+
+<big>'''ᎹᏱᎩᎵ'''</big> ᎠᎴ <big>'''ᎹᎦᎵ'''</big> ᏣᎳᎩ ᎠᏁᏢᏔᏅᎯ ᎩᎵᏏ ᏚᏙᎥ '''''Michael'''''.
+
+== ᏗᎦᏃᏣᎵ ᎠᏂᏴᏫ ==
+=== ᎠᏂᏈᏌᏂᏘᏂ ᎤᏂᎬᏫᏳᎯ ===
+* [[Michael I Rangabe|ᎹᏱᎩᎵ I ᎳᏂᎦᏇ]] (????-844), married the daughter of Emperor Nikephoros I
+* [[Michael II|ᎹᏱᎩᎵ II]] (770–829), also called "the Stammerer"
+* [[Michael III|ᎹᏱᎩᎵ III]] (840–867), also called "the Drunkard", youngest child of Emperor Theophilos
+* [[Michael IV the Paphlagonian|ᎹᏱᎩᎵ IV ᎠᏆᏆᎳᎪᏂᏱ]] (1010–1041), came from a peasant family
+* [[Michael V|ᎹᏱᎩᎵ V]] (1015–1042), nephew of Michael IV
+* [[Michael VI Stratiotikos|ᎹᏱᎩᎵ VI ᏍᏝᏘᎣᏘᎪᏏ]] (unknown–1059), chosen by the empress Theodora as her successor
+* [[Michael VII Doukas|ᎹᏱᎩᎵ VII ᏚᎧᏏ]] (c1050–1078), eldest son of Constantine X Doukas
+* [[Michael VIII Palaiologos|ᎹᏱᎩᎵ VIII ᏆᎴᎣᎶᎪᏏ]] (1223–1282), founder of the Palaeologan dynasty
+* [[Michael IX Palaiologos|ᎹᏱᎩᎵ IX ᏆᎴᎣᎶᎪᏏ]] (1277–1320), eldest son of Andronikos II Palaiologos
+
+
+[[af:Michael (naam)]]
+[[be:Імя Міхаіл]]
+[[br:Michel]]
+[[ca:Miquel]]
+[[cs:Michael]]
+[[da:Michael]]
+[[de:Michael]]
+[[el:Μιχαήλ]]
+[[en:Michael]]
+[[es:Miguel]]
+[[eo:Mikaelo]]
+[[fr:Michael]]
+[[ko:미카일]]
+[[hr:Mihovil (ime)]]
+[[it:Michael]]
+[[la:Michael]]
+[[hu:Mihály]]
+[[nah:Miguel]]
+[[nl:Michaël]]
+[[ja:マイケル]]
+[[no:Michael]]
+[[pt:Michael]]
+[[ru:Михаил]]
+[[simple:Michael]]
+[[sk:Michal]]
+[[sl:Mihajlo]]
+[[sr:Михаило]]
+[[fi:Mikael]]
+[[sv:Mikael]]
+[[th:ไมเคิล]]
+[[uk:Михайло]]
+[[vi:Michael]]
+[[wuu:Michael]]
+[[zh:迈克尔]]
