*Empty MediaWiki Message*

--- a/ᎹᏱᎩᎵ.mw
+++ b/ᎹᏱᎩᎵ.mw
@@ -14,16 +14,16 @@
 <big>'''ᎹᏱᎩᎵ'''</big> ᎠᎴ <big>'''ᎹᎦᎵ'''</big> ᏣᎳᎩ ᎠᏁᏢᏔᏅᎯ ᎩᎵᏏ ᏚᏙᎥ '''''Michael'''''.
 
 == ᏗᎦᏃᏣᎵ ᎠᏂᏴᏫ ==
-=== ᎠᏂᏈᏌᏂᏘᏂ ᎤᏂᎬᏫᏳᎯ ===
-* [[Michael I Rangabe|ᎹᏱᎩᎵ I ᎳᏂᎦᏇ]] (????-844), married the daughter of Emperor Nikephoros I
-* [[Michael II|ᎹᏱᎩᎵ II]] (770–829), also called "the Stammerer"
-* [[Michael III|ᎹᏱᎩᎵ III]] (840–867), also called "the Drunkard", youngest child of Emperor Theophilos
-* [[Michael IV the Paphlagonian|ᎹᏱᎩᎵ IV ᎠᏆᏆᎳᎪᏂᏱ]] (1010–1041), came from a peasant family
-* [[Michael V|ᎹᏱᎩᎵ V]] (1015–1042), nephew of Michael IV
-* [[Michael VI Stratiotikos|ᎹᏱᎩᎵ VI ᏍᏝᏘᎣᏘᎪᏏ]] (unknown–1059), chosen by the empress Theodora as her successor
-* [[Michael VII Doukas|ᎹᏱᎩᎵ VII ᏚᎧᏏ]] (c1050–1078), eldest son of Constantine X Doukas
-* [[Michael VIII Palaiologos|ᎹᏱᎩᎵ VIII ᏆᎴᎣᎶᎪᏏ]] (1223–1282), founder of the Palaeologan dynasty
-* [[Michael IX Palaiologos|ᎹᏱᎩᎵ IX ᏆᎴᎣᎶᎪᏏ]] (1277–1320), eldest son of Andronikos II Palaiologos
+=== ᎠᏂᏈᏌᏂᏘᏂ ᎤᏂᎬᏫᏳᎯ ᎡᏆ ===
+* [[Michael I Rangabe|ᎹᏱᎩᎵ I ᎳᏂᎦᏇ]] (????-844) ᎠᏍᎦᏯ ᎤᏤᎵ ᎤᏪᏥ [[Emperor Nikephoros|ᎤᎬᏫᏳᎯ ᎡᏆ ᏂᎨᏉᎶᏏ]]
+* [[Michael II|ᎹᏱᎩᎵ II]] (770–829)
+* [[Michael III|ᎹᏱᎩᎵ III]] (840–867), [[Emperor Theophilos|ᎤᎬᏫᏳᎯ ᎡᏆ ᏘᎣᏈᎶᏏ]] ᎤᏪᏥ
+* [[Michael IV the Paphlagonian|ᎹᏱᎩᎵ IV ᎠᏆᏆᎳᎪᏂᏱ]] (1010–1041)
+* [[Michael V|ᎹᏱᎩᎵ V]] (1015–1042)
+* [[Michael VI Stratiotikos|ᎹᏱᎩᎵ VI ᏍᏝᏘᎣᏘᎪᏏ]] (????–1059)
+* [[Michael VII Doukas|ᎹᏱᎩᎵ VII ᏚᎧᏏ]] (~1050–1078), ᎤᏪᏥ [[Constantine X Doukas|ᎧᏂᏍᏔᏂᏘᏂ X ᏚᎧᏏ]]
+* [[Michael VIII Palaiologos|ᎹᏱᎩᎵ VIII ᏆᎴᎣᎶᎪᏏ]] (1223–1282)
+* [[Michael IX Palaiologos|ᎹᏱᎩᎵ IX ᏆᎴᎣᎶᎪᏏ]] (1277–1320), ᎤᏪᏥ [[Andronikos II Palaiologos|ᎡᏂᏗᎶᏂᎪᏏ II ᏆᎴᎣᎶᎪᏏ]]
 
 
 [[af:Michael (naam)]]
