*Empty MediaWiki Message*

--- a/ᎠᏂᎪᎢ.mw
+++ b/ᎠᏂᎪᎢ.mw
@@ -75,7 +75,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᎪᎢ'''</big> ᎠᏂᏴᏩ [[ᎪᎢ]] ᎡᎯ. ᎠᏂᎪᎢ [[ᎠᏂᎪᎢ ᎧᏬᏂᎯᏍᏗ|ᎪᎢ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᎪᎢ'''</big> ᎠᏂᏴᏫ [[ᎪᎢ]] ᎡᎯ. ᎠᏂᎪᎢ [[ᎠᏂᎪᎢ ᎧᏬᏂᎯᏍᏗ|ᎪᎢ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
