*Empty MediaWiki Message*

--- a/ᎠᏂᎢᏔᎵ.mw
+++ b/ᎠᏂᎢᏔᎵ.mw
@@ -67,7 +67,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᎢᏔᎵ'''</big> ᎠᏂᏴᏩ [[ᎢᏔᎵᏱ]] ᎡᎯ. ᎠᏂᎢᏔᎵ [[ᎠᏂᎢᏔᎵ ᎧᏬᏂᎯᏍᏗ|ᎢᏔᎵ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᎢᏔᎵ'''</big> ᎠᏂᏴᏫ [[ᎢᏔᎵᏱ]] ᎡᎯ. ᎠᏂᎢᏔᎵ [[ᎠᏂᎢᏔᎵ ᎧᏬᏂᎯᏍᏗ|ᎢᏔᎵ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
