*Empty MediaWiki Message*

--- a/ᎠᏂᎬᎾ.mw
+++ b/ᎠᏂᎬᎾ.mw
@@ -60,7 +60,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᎬᎾ'''</big> ᎠᏂᏴᏩ [[ᎬᏂᏱ]] ᎡᎯ. ᎠᏂᎬᎾ [[ᎠᏂᎬᎾ ᎧᏬᏂᎯᏍᏗ|ᎬᏂ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᎬᎾ'''</big> ᎠᏂᏴᏫ [[ᎬᏂᏱ]] ᎡᎯ. ᎠᏂᎬᎾ [[ᎠᏂᎬᎾ ᎧᏬᏂᎯᏍᏗ|ᎬᏂ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
