*Empty MediaWiki Message*

--- a/ᎠᏂᎺᏏᎪ.mw
+++ b/ᎠᏂᎺᏏᎪ.mw
@@ -76,7 +76,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᎺᏏᎪ'''</big> ᎠᎴ <big>'''ᎠᏂᎺᏏᏅᏟ'''</big> ([[ᎠᏂᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ|ᏙᎢᏥ]]: ''Mexicanos'') ᎠᏂᏴᏩ [[ᎺᏏᎪ]] ᎡᎯ. ᎠᏂᏍᏫᏏ [[ᎠᏂᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ|ᏍᏆᏂ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᎺᏏᎪ'''</big> ᎠᎴ <big>'''ᎠᏂᎺᏏᏅᏟ'''</big> ([[ᎠᏂᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ|ᏙᎢᏥ]]: ''Mexicanos'') ᎠᏂᏴᏫ [[ᎺᏏᎪ]] ᎡᎯ. ᎠᏂᏍᏫᏏ [[ᎠᏂᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ|ᏍᏆᏂ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
