--- a/ᎠᏂᎾᏩᎰ.mw
+++ b/ᎠᏂᎾᏩᎰ.mw
@@ -1,6 +1,6 @@
 [[File:Navajo-protraits.jpg|thumb|right|ᎠᏂᎾᏩᎰ|250px]]
 
-<big>'''ᎠᏂᎾᏩᎰ'''</big> ᎠᏂᏴᏩ [[ᏍᏆᏂᏤᏍᏛᎢ]] ᎠᎴ [[ᎡᏩᏐᎾ]] ᎠᎴ [[ᏳᏔ]] ᎡᎯ. ᎠᏂᎾᏩᎰ [[ᎠᏂᎾᏩᎰ ᎧᏬᏂᎯᏍᏗ|ᎾᏩᎰ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᎾᏩᎰ'''</big> ᎠᏂᏴᏫ [[ᏍᏆᏂᏤᏍᏛᎢ]] ᎠᎴ [[ᎡᏩᏐᎾ]] ᎠᎴ [[ᏳᏔ]] ᎡᎯ. ᎠᏂᎾᏩᎰ [[ᎠᏂᎾᏩᎰ ᎧᏬᏂᎯᏍᏗ|ᎾᏩᎰ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
