*Empty MediaWiki Message*

--- a/ᎠᏂᏆᏏᎵ.mw
+++ b/ᎠᏂᏆᏏᎵ.mw
@@ -59,7 +59,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᏆᏏᎵ'''</big> ᎠᏂᏴᏩ [[ᏆᏏᎵ]] ᎡᎯ. ᎠᏂᏆᏏᎵ [[ᎠᏂᏉᏧᎦᎵ ᎧᏬᏂᎯᏍᏗ|ᏉᏧᎦᎵ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᏆᏏᎵ'''</big> ᎠᏂᏴᏫ [[ᏆᏏᎵ]] ᎡᎯ. ᎠᏂᏆᏏᎵ [[ᎠᏂᏉᏧᎦᎵ ᎧᏬᏂᎯᏍᏗ|ᏉᏧᎦᎵ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
