*Empty MediaWiki Message*

--- a/ᎠᏂᏉᏧᎦᎵ.mw
+++ b/ᎠᏂᏉᏧᎦᎵ.mw
@@ -59,7 +59,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᏉᏧᎦᎵ'''</big> ᎠᏂᏴᏩ [[ᏉᏧᎦᎵ]] ᎡᎯ. ᎠᏂᏉᏧᎦᎵ [[ᎠᏂᏉᏧᎦᎵ ᎧᏬᏂᎯᏍᏗ|ᏉᏧᎦᎵ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᏉᏧᎦᎵ'''</big> ᎠᏂᏴᏫ [[ᏉᏧᎦᎵ]] ᎡᎯ. ᎠᏂᏉᏧᎦᎵ [[ᎠᏂᏉᏧᎦᎵ ᎧᏬᏂᎯᏍᏗ|ᏉᏧᎦᎵ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
