*Empty MediaWiki Message*

--- a/ᎠᏂᏍᏆᏂ.mw
+++ b/ᎠᏂᏍᏆᏂ.mw
@@ -59,7 +59,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᏍᏆᏂ'''</big> ᎠᏂᏴᏩ [[ᏍᏆᏂᏱ]] ᎡᎯ. ᎠᏂᏍᏆᏂ [[ᎠᏂᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ|ᏍᏆᏂ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᏍᏆᏂ'''</big> ᎠᏂᏴᏫ [[ᏍᏆᏂᏱ]] ᎡᎯ. ᎠᏂᏍᏆᏂ [[ᎠᏂᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ|ᏍᏆᏂ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
